# joplin-mcp-server

./: .pre-commit-config.yaml  README.md  main.py  pylock.toml  pyproject.toml
.github/: dependabot.yml
specs/: rest_api_referece.md
src/joplin_mcp_server/: entry.py  joplin_client.py
